k8s/deploy/media-deployment-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: yas
  labels:
    app: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: docker.io/anhhnus/media-service:cabb97e8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 6
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        startupProbe:
          failureThreshold: 60
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 750m
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /images
          name: media-images
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: yas-worker-32gb
      volumes:
      - name: media-images
        persistentVolumeClaim:
          claimName: media-images-pvc
