k8s/deploy/media-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"media"},"name":"media","namespace":"yas"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"media"}},"template":{"metadata":{"labels":{"app":"media"}},"spec":{"containers":[{"env":[{"name":"SPRING_APPLICATION_NAME","value":"media"},{"name":"SERVER_PORT","value":"8080"},{"name":"SERVER_SERVLET_CONTEXT_PATH","value":"/media"},{"name":"SPRING_DATASOURCE_URL","value":"jdbc:postgresql://postgres:5432/ [...]
  creationTimestamp: "2026-06-26T05:40:25Z"
  generation: 3
  labels:
    app: media
  name: media
  namespace: yas
  resourceVersion: "69699"
  uid: 5286f227-7ada-42e9-a9e8-dac224b2cea0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: media
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-05T18:21:50+07:00"
      labels:
        app: media
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_NAME
          value: media
        - name: SERVER_PORT
          value: "8080"
        - name: SERVER_SERVLET_CONTEXT_PATH
          value: /media
        - name: SPRING_DATASOURCE_URL
          value: jdbc:postgresql://postgres:5432/media
        - name: SPRING_DATASOURCE_USERNAME
          value: admin
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: yas-db-secret
        - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
          value: http://keycloak:8080/realms/Yas
        - name: YAS_PUBLIC_URL
          value: http://api.yas.local/media
        image: docker.io/anhhnus/media-service:cabb97e8
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        name: media
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 750m
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
        startupProbe:
          failureThreshold: 60
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /images
          name: media-images
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: yas-worker-32gb
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: media-images
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-05T10:54:28Z"
    lastUpdateTime: "2026-07-05T10:54:28Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-05T05:17:46Z"
    lastUpdateTime: "2026-07-05T11:26:50Z"
    message: ReplicaSet "media-949668b8f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
