k8s/deploy/zookeeper-persistence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: yas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - image: debezium/zookeeper:2.7.3.Final
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 2181
          timeoutSeconds: 1
        name: zookeeper
        ports:
        - containerPort: 2181
          name: client
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 2181
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: zookeeper-data
          mountPath: /zookeeper/data
          subPath: data
        - name: zookeeper-data
          mountPath: /zookeeper/txns
          subPath: txns
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: yas-worker-32gb
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: zookeeper-data
        persistentVolumeClaim:
          claimName: zookeeper-data
