k8s/deploy/yas-ingress-updated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-ingress
  namespace: yas
spec:
  ingressClassName: traefik
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - backend:
          service:
            name: storefront-bff
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: storefront.yas.local
    http:
      paths:
      - backend:
          service:
            name: storefront-bff
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: backoffice.yas.local.com
    http:
      paths:
      - backend:
          service:
            name: backoffice-bff
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: backoffice.yas.local
    http:
      paths:
      - backend:
          service:
            name: backoffice-bff
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: identity.yas.local.com
    http:
      paths:
      - backend:
          service:
            name: identity
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: identity.yas.local
    http:
      paths:
      - backend:
          service:
            name: identity
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api.yas.local
    http:
      paths:
      - backend:
          service:
            name: media
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: product
            port:
              number: 80
        path: /product
        pathType: Prefix
  - host: api.yas.local.com
    http:
      paths:
      - backend:
          service:
            name: media
            port:
              number: 80
        path: /media
        pathType: Prefix
      - backend:
          service:
            name: product
            port:
              number: 80
        path: /product
        pathType: Prefix
